# General-Approach-to-Path-Planning-within-C-space-Safe-Corridors

./: CMakeLists.txt  ChJoint.cpp  ChJoint.h  ChPlanModel.cpp  ChPlanModel.h  ChPlanner.cpp  ChPlanner.h  ChRobot.cpp  ChRobot.h  ChRobot_6dof.cpp  ChRobot_6dof.h  ChRobot_6dof_CAD.cpp  ChRobot_6dof_CAD.h  ChRobot_6dof_CAD_free.cpp  ChRobot_6dof_CAD_free.h  ChRobot_6dof_free.cpp  ChRobot_6dof_free.h  ChRobot_free.cpp  ChRobot_free.h  Example.cpp  GbpfAlgorithmCube.cpp  GbpfAlgorithmCube.h  GbpfAlgorithmCuboid.cpp  GbpfAlgorithmCuboid.h  readme.txt
CAD_export2/: UR5e.cpp  UR5e.h
CAD_export2/UR5e_shapes/: UR5e.txt
CAD_export_new/: new_coll.cpp  new_coll.h
CAD_export_new/new_coll_shapes/: new_coll.txt
CAD_models/: Link1_UR5_STEP.SLDPRT  Link2_UR5_STEP.SLDPRT  Link3_UR5_STEP.SLDPRT  Link4_UR5_STEP_1000515.SLDPRT  Link5_UR5_STEP.SLDPRT  Link6_UR5_STEP.SLDPRT  Tazza.SLDPRT
Spline Optimization/: main.py  main_multiobj.py  setup.py
Spline Optimization/Bspl_Lib/: __init__.py  cython_ubsplclib.c  cython_ubsplclib.cp311-win_amd64.pyd  cython_ubsplclib.pxd  cython_ubsplclib.pyx  ubsplclib.c  ubsplclib.h  utils.pxi
laser/: goal_new.SLDPRT  start_new.SLDPRT
shelves/: industrial_shelf.SLDASM  shelf_divider.SLDPRT  table_leg.SLDPRT  table_surface.SLDPRT
